updated datbase host

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 spring.application.name=Postgres-CRUD
 
-spring.datasource.url=jdbc:postgresql://172.17.0.6:5432/spring
+spring.datasource.url=jdbc:postgresql://pi-postgres:5432/spring
 spring.datasource.username=supriyo
 spring.datasource.password=India@#2019
 
